[package]
name = "nn"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gpu = ["cuda"]

[dependencies]
rand = "*"
ndarray = "*"
ndarray-npy = "*"
unicode-segmentation = "*"
itertools = "*"
rayon = "*"
simd_linalg = { git="https://github.com/s3bk/simd_linalg" }
log = "*"
env_logger = "*"
argh = "*"
num_cpus = "*"
cuda = { path = "../cuda", optional=true }
